test/acceptance/validating/failing/invalid-css-selector.spun
get "http://google.com"

find "||||||||||||||||"
